Various spacing/sizing fixes.

--- a/assets/css/v2/elevator/elevator_closures.scss
+++ b/assets/css/v2/elevator/elevator_closures.scss
@@ -8,8 +8,9 @@
 
   .in-station-summary {
     display: flex;
+    gap: 82px;
     justify-content: space-between;
-    padding: 24px 58px;
+    padding: 24px 48px;
     font-size: 48px;
     font-weight: 400;
     line-height: 64px;
@@ -82,7 +83,15 @@
             .route-pill {
               width: 132px;
               height: 68.13px;
+
+              & > * {
+                height: 100%;
+              }
             }
+          }
+
+          &__elevator-name {
+            line-height: 64px;
           }
 
           &__elevator-name.list-item {
@@ -95,9 +104,16 @@
     }
 
     .paging-info-container {
+      position: absolute;
+      bottom: 0;
       display: flex;
       justify-content: space-between;
-      margin: 0 48px;
+      width: 100%;
+      height: 72px;
+
+      & > * {
+        margin: 0 48px 12px;
+      }
 
       .paging-indicators {
         display: flex;
@@ -111,7 +127,6 @@
     .alert-row__elevator-name {
       font-size: 48px;
       font-weight: 400;
-      line-height: 64px;
       color: $cool-black-30;
     }
   }
